--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
 .text-iron {
   color: #0a035a;
 }
+
+.travel-card-container {
+  border: 1px solid #ddd;
+  padding: 16px;
+  border-radius: 8px;
+}
